CHANGELOG for Fall of Eden
--------------------------

--------------------------------------------
                  CURRENT
--------------------------------------------

Version 0.4q
------------
* Added a warning message to the save screen

--------------------------------------------
             PREVIOUS VERSIONS
--------------------------------------------

Version 0.4p
------------
* Cassidy indoor sex scenes added. Must be unlocked
* Cassidy sparring sex scenes (win/loss) added. Must be unlocked by first having regular sex
* After your spar, Cass can ask you to model. One off scene
* Cassidy now has a followup to the talk about looks. This will change some scenes slightly. Needs rel > 50 to trigger
* Fixed an error in Cavalcade score evaluation
* Slightly boosted the default girth cap for penetration, which will hopefully fix some stringent NPCs refusing penetration
* Vaughn task 3: you can now trigger the scene by waiting in the inn too
* Fixed a variety of typos etc.

Version 0.4o2
-------------
* Fixed a bug related to Zebras (specifically when viewing their offspring in the nursery, but likely to have other effects too)
* The usual bugs and typos
* Fixed some weirdness in Cale's Rogue training fuck, [Take it] branch
* Fixed a bug that would crash the game if a very specific set of actions were taken during the intro
* The old Fertilium potion was renamed to Gestarium+. Its potence has increased slightly
* Added a new Fertilium and Fertilium+ potions, which work as a potency enhancers. Adds a buff for 1 day or 5 days that greatly increases chances of impregnating and getting pregnant. Buy them from Patchwork for the moment
* Added the Infertilium and Infertilium+ potions, which work as contraceptives. Adds a debuff for 1 or 5 days that almost certainly prevents pregnancy. Buy them from Patchwork for the moment

Version 0.4o
------------
* Typos and bugfixes galore
* Persistent status effects have been coded