@@ -8,6 +8,7 @@ CHANGELOG for Fall of Eden
 Version 0.4q
 ------------
 * Added a warning message to the save screen
+* Fixed the requirement for Gwendy's Double Dildo scene. You need a cap of 8 instead of 30, so you might need to work your way up a bit first
 
 --------------------------------------------
              PREVIOUS VERSIONS
